[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = [ "full" ] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
url = "2.2.2"
proc-macro2 = "1"